# kattis

./: .gitignore  MODULE.bazel  README.md
2naire/: 2naire.cpp
api/: BUILD.bazel  EdgeTest.cpp  PointTest.cpp  PolygonTest.cpp  edge.cpp  edge.h  graham.cpp  graham.h  point.cpp  point.h  polygon.cpp
dvaput/: README.md  dvaput.cpp  kasai.cpp  kasai.hpp  manber_myers.hpp  sample1.in  sample2.in  sample3.in
evilstraw/: evilstraw.cpp
freckles/: freckles.cpp
gold/: gold.cpp
happyprime/: happyprime.cpp
hidingplaces/: hidingplaces.cpp
howmanyzeros/: howmanyzeros.cpp
ignore/: ignore.cpp  ignore.md
islandhopping/: islandhopping.cpp
jughard/: jughard.cpp
linesegmentdistance/: BUILD.bazel  linesegmentdistance.cpp  linesegmentdistance_test.sh
linesegmentintersection/: BUILD.bazel  linesegmentintersection.cpp  linesegmentintersection_test.sh
logo/: edge.cpp  edge.h  logo.cpp  point.cpp  point.h
messages/: messages.cpp
pointinpolygon/: BUILD.bazel  edge.cpp  point.cpp  point.h  pointinpolygon.cpp  pointinpolygon_test.sh  polygon.cpp  polygon.h
polygonarea/: BUILD.bazel  point.cpp  polygon.cpp  polygon.h  polygonarea.cpp  polygonarea_test.sh
primereduction/: primereduction.cpp
rafting/: point.cpp  point.h  rafting.cpp
rationalarithmetic/: BUILD.bazel  rational_number_test.cpp  rationalarithmetic.cpp  rationalarithmetic_test.sh  rationalnumber.cpp  rationalnumber.hpp
roberthood/: roberthood.cpp
satisfiability/: satisfiability.cpp
shopaholic/: shopaholic.cpp  shopaholic.md
spiderman/: spiderman.cpp
stringmatching/: README.md  knuth_morris_pratt.cpp  knuth_morris_pratt.hpp  stringmatching.cpp
suffixsorting/: README.md  manber_myers.cpp  sample1.in  sample1.out  suffixsorting.cpp
trilemma/: edge.cpp  edge.h  input.in  point.cpp  point.h  trilemma.cpp
uxuhulvoting/: uxuhulvoting.cpp
