cc_binary(
    name = "PolygonArea",
    srcs = ["polygonarea.cpp"],
    deps = ["//api:Polygon"],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "PolygonAreaTest",
    srcs = ["polygonarea_test.sh"],
    data = [
        ":PolygonArea",
        "sample.in",
        "sample.out",
    ],
    visibility = ["//visibility:public"],
)

